src/test/ui/feature-gates/feature-gate-repr_align_enum.stderr
error[E0658]: `#[repr(align(x))]` on enums is experimental (see issue #57996)
  --> $DIR/feature-gate-repr_align_enum.rs:4:1
   |
LL | #[repr(align(8))] //~ ERROR `#[repr(align(x))]` on enums is experimental (see issue #57996)
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(repr_align_enum)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
